create readme.md file

--- a/src/Component/Home/Home.css
+++ b/src/Component/Home/Home.css
@@ -6,10 +6,10 @@
 
 .img h1 {
 
-    color: rgb(213, 6, 40);
+    color: red;
     font-weight: 900;
     padding-top: 21%;
-
+    margin-left: 10%;
     font-size: 55px;
     letter-spacing: 9px;
 }
@@ -31,9 +31,10 @@
 
     .img h1 {
 
-        color: rgb(8, 15, 8);
+        color: red;
         text-align: center;
         font-size: 35px;
+
         letter-spacing: 5px;
     }
 
